@@ -6,9 +6,11 @@ lcs-desktop (2.4.8~5) Lcs; urgency=low
   * Add icon for smbwebclient
   * Fix bug on new icon smbwebclent
   * Fix bug with maintinfo in core/action/load_settings.php
-  * Add icon bcdiweb
+  * Fix bugs in the display of infos user
+  * Add icon appli bcdiweb
+  * Add icon annu for 'other' groups  
 
- -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Fri, 24 Sep 2010 12:06:48 +0200
+ -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Fri, 24 Sep 2010 21:45:36 +0200
 
 lcs-desktop (2.4.8~4) Lcs; urgency=low
 
